# KikoBot

./: .replit  README.md  auto_updator.py  config.json  main.py  pyproject.toml  webserver.py
templates/: base.html  config.html  home.html
