[tool.poetry]
name = "AuraBot"
version = "0.0.1"
description = ""
authors = ["Kiko#5535 (Discord)", "Aspect#0003 (Discord)"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
fortnitepy = "^3.2.0"
fortnite-api = "^2.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
